# gambiarra-arena-client-python

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
gambiarra_client/: __init__.py  cli.py
gambiarra_client/net/: __init__.py  ws.py
gambiarra_client/runners/: __init__.py  lmstudio.py  mock.py  ollama.py  types.py
scripts/: start-client.sh  start-round.sh
